infra/usedeall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usedeall-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usedeall-app
            port:
              number: 3001
